[package]
name = "datasneaker-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for DataSneaker event tracking"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"

[features]
blocking = []
